--- a/1-10.css
+++ b/1-10.css
@@ -24,19 +24,19 @@ main{
   margin-right:0;
 }
 .step1-img{
-  background-image:url(img/flow01.png);
+  background-image:url(./img/flow01.png);
   height:150px;
   background-size:cover;
   background-position:bottom;
 }
 .step2-img{
-  background-image:url(img/flow02.png);
+  background-image:url(./img/flow02.png);
   height:150px;
   background-size:cover;
   background-position:bottom;
 }
 .step3-img{
-  background-image:url(img/flow03.png);
+  background-image:url(./img/flow03.png);
   height:150px;
   background-size:cover;
   background-position:bottom;
